--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,8 +12,8 @@
   --title-color: hsl(var(--hue), 4%, 100%);
   --text-color: hsl(var(--hue), 4%, 85%);
   --text-color-light: hsl(var(--hue), 4%, 55%);
-  --body-color: linear-gradient(90deg, hsl(104, 28%, 40%) 0%, hsl(58, 28%, 40%) 100%);
-  --container-color: linear-gradient(136deg, hsl(104, 28%, 35%) 0%, hsl(58, 28%, 35%) 100%);
+  --body-color:  hsl(196, 16%, 14%);
+  --container-color:linear-gradient(hsl(164, 17%, 27%), hsl(164, 17%, 32%), hsl(164, 17%, 40%), hsl(164, 17%, 45%)); 
 
   /*========== Font and typography ==========*/
   --body-font: 'Poppins', sans-serif;
@@ -157,7 +157,7 @@ button{
 }
 
 .nav_logo-img{
-  width: 1.25rem;
+  width: 5rem;
 }
 
 .nav_link,
