--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -105,6 +105,10 @@ button{
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
 }
+small h4 {
+  margin: 0;
+  padding: 0;
+}
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .section {
@@ -426,6 +430,93 @@ button{
   width: 200px;
   justify-self: center;
 }
+
+/*=============== CAROUSEL ===============*/
+.slick-list {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: fit-content;
+  height: 304px; 
+  padding: 10px 0px;
+  margin: 0px auto;
+  max-width: 90vw;
+  overflow: hidden;
+}
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  transition: .5s ease-in-out;
+}
+
+.slick {
+  position: relative;
+  width: 275px;
+  padding: 0 18px;
+  float: left;
+  box-sizing: border-box;
+  display: flex;
+  height: 100%;
+
+}
+
+.slick h4 {
+  position: absolute;
+  z-index: 1;
+  font-size: 22px;
+  line-height: 23px;
+  padding: 40px;
+}
+
+.slick h4 small {
+  font-size: 15px;
+  display: block;
+}
+
+.slick a img {
+  object-fit: cover;
+  height: 300px;
+  width: 100%;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.5);
+  transition: .3s ease-in-out;
+}
+
+.slick a img:hover{
+  opacity: .85;
+}
+
+.slick-arrow {
+  border-radius: 30px;
+  background-color: var(--title-color);
+  position: absolute;
+  z-index: 4;
+  width: 48px;
+  height: 48px;
+  text-align: center;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,.15);
+  border: 0;
+  cursor: pointer;
+}
+
+.slick-arrow:focus {
+  outline: 0;
+
+}  
+
+.slick-prev {
+  left: 0px;
+}
+
+
+.slick-next {
+  right: 0px;
+}
+ 
 
 /*=============== ROADMAP ===============*/
 .container_roadmap {
